--- a/style.css
+++ b/style.css
@@ -11,6 +11,11 @@ a {
   margin: 0;
 }
 
+main {
+  overflow-x: clip;
+  width: 100vw;
+}
+
 * {
   box-sizing: border-box;
   font-family: "Montserrat", sans-serif;
@@ -54,6 +59,7 @@ ul {
 }
 
 header {
+  width: 100%;
   height: 100px;
   border-bottom: 1px solid #a1a1a150;
   position: relative;
@@ -570,12 +576,12 @@ header nav.navigation .nav-link:hover::after {
 .services .services__list {
   display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: space-around;
   flex-direction: row;
   flex-wrap: wrap;
 }
 .services .services__list .services__item {
-  width: calc(100% / 3 - 18px);
+  width: calc(100% / 3 - 24px);
   position: relative;
   margin-bottom: 55px;
 }
@@ -609,7 +615,7 @@ header nav.navigation .nav-link:hover::after {
   }
 }
 .services .services__list .services__item .services__subtitle {
-  width: 223px;
+  width: 226px;
   font-size: 18px;
   font-weight: 600;
   line-height: 22px;
@@ -2911,6 +2917,26 @@ footer {
   flex-direction: column;
   position: relative;
 }
+@media screen and (max-width: 1280px) {
+  footer {
+    min-height: 340px;
+  }
+}
+@media screen and (max-width: 1024px) {
+  footer {
+    min-height: 275px;
+  }
+}
+@media screen and (max-width: 768px) {
+  footer {
+    min-height: 205px;
+  }
+}
+@media screen and (max-width: 400px) {
+  footer {
+    min-height: 140px;
+  }
+}
 footer::before {
   content: "";
   position: absolute;
@@ -2932,6 +2958,8 @@ footer .footer__wrapper {
   margin-top: 70px;
   margin-bottom: 30px;
   border-bottom: 1px solid #e0e0e0;
+  flex-wrap: wrap;
+  justify-content: space-between;
 }
 @media screen and (max-width: 1280px) {
   footer .footer__wrapper {
@@ -2958,15 +2986,68 @@ footer .footer__wrapper {
     width: 300px;
   }
 }
-footer .footer__wrapper > div {
-  width: 242px;
-  height: 235px;
-  margin-right: 43px;
+@media screen and (max-width: 1280px) {
+  footer .footer__wrapper {
+    margin-top: 55px;
+    margin-bottom: 25px;
+    justify-content: flex-end;
+  }
 }
-footer .footer__wrapper > div:last-of-type {
-  margin-right: 0;
+@media screen and (max-width: 1024px) {
+  footer .footer__wrapper {
+    margin-top: 45px;
+    margin-bottom: 20px;
+  }
 }
-footer .footer__wrapper > div > h3 {
+@media screen and (max-width: 768px) {
+  footer .footer__wrapper {
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+    margin-top: 35px;
+    margin-bottom: 15px;
+  }
+}
+footer .footer__wrapper > li {
+  width: calc(100% / 4 - 33.75px);
+  margin-bottom: 70px;
+}
+@media screen and (max-width: 1280px) {
+  footer .footer__wrapper > li {
+    width: calc(100% / 2 - 50px);
+    margin-bottom: 55px;
+  }
+}
+@media screen and (max-width: 1024px) {
+  footer .footer__wrapper > li {
+    width: calc(100% / 2 - 30px);
+    margin-bottom: 45px;
+  }
+}
+@media screen and (max-width: 768px) {
+  footer .footer__wrapper > li {
+    width: calc(100% / 2 - 20px);
+    margin-bottom: 0px;
+  }
+  footer .footer__wrapper > li ul {
+    clip: rect(0 0 0 0);
+    width: 0px;
+    height: 0px;
+    margin-left: -10000px;
+  }
+}
+@media screen and (max-width: 400px) {
+  footer .footer__wrapper > li {
+    width: 60%;
+  }
+}
+footer .footer__wrapper > li:hover ul {
+  clip: auto;
+  width: auto;
+  height: auto;
+  margin: auto;
+}
+footer .footer__wrapper > li > h3 {
   font-size: 18px;
   font-weight: 600;
   line-height: 22px;
@@ -2974,85 +3055,213 @@ footer .footer__wrapper > div > h3 {
   margin-bottom: 35px;
 }
 @media screen and (max-width: 1280px) {
-  footer .footer__wrapper > div > h3 {
+  footer .footer__wrapper > li > h3 {
     font-size: 15px;
     line-height: 18px;
   }
 }
 @media screen and (max-width: 1024px) {
-  footer .footer__wrapper > div > h3 {
+  footer .footer__wrapper > li > h3 {
     font-size: 14px;
     line-height: 16px;
   }
 }
 @media screen and (max-width: 768px) {
-  footer .footer__wrapper > div > h3 {
+  footer .footer__wrapper > li > h3 {
     font-size: 12px;
     line-height: 12px;
   }
 }
 @media screen and (max-width: 640px) {
-  footer .footer__wrapper > div > h3 {
+  footer .footer__wrapper > li > h3 {
     font-size: 10px;
     line-height: 10px;
   }
 }
-footer .footer__wrapper > div ul > li {
+@media screen and (max-width: 1280px) {
+  footer .footer__wrapper > li > h3 {
+    margin-bottom: 30px;
+  }
+}
+@media screen and (max-width: 1024px) {
+  footer .footer__wrapper > li > h3 {
+    margin-bottom: 25px;
+  }
+}
+@media screen and (max-width: 768px) {
+  footer .footer__wrapper > li > h3 {
+    margin-bottom: 20px;
+  }
+}
+@media screen and (max-width: 400px) {
+  footer .footer__wrapper > li > h3 {
+    margin-bottom: 15px;
+  }
+}
+footer .footer__wrapper > li ul > li {
   position: relative;
   margin-bottom: 30px;
   padding-left: 17px;
 }
-footer .footer__wrapper > div ul > li:last-child {
-  margin-bottom: 70px;
+footer .footer__wrapper > li ul > li:last-child {
+  margin: 0;
 }
-footer .footer__wrapper > div ul > li::before {
+@media screen and (max-width: 1280px) {
+  footer .footer__wrapper > li ul > li {
+    margin-bottom: 20px;
+    padding-left: 14px;
+  }
+}
+@media screen and (max-width: 1024px) {
+  footer .footer__wrapper > li ul > li {
+    margin-bottom: 15px;
+    padding-left: 11px;
+  }
+}
+@media screen and (max-width: 768px) {
+  footer .footer__wrapper > li ul > li {
+    margin-bottom: 10px;
+    padding-left: 9px;
+  }
+}
+@media screen and (max-width: 400px) {
+  footer .footer__wrapper > li ul > li {
+    margin-bottom: 5px;
+    padding-left: 6px;
+  }
+}
+footer .footer__wrapper > li ul > li::before {
   content: "";
   width: 5px;
   height: 9px;
   position: absolute;
   background-image: url(./images/arrow.svg);
+  background-size: contain;
   left: 0;
   top: calc(50% - 4.5px);
 }
-footer .footer__wrapper > div .contacts__list > li {
+@media screen and (max-width: 1024px) {
+  footer .footer__wrapper > li ul > li::before {
+    width: 4px;
+    height: 8px;
+    top: calc(50% - 2px);
+  }
+}
+@media screen and (max-width: 768px) {
+  footer .footer__wrapper > li ul > li::before {
+    width: 3px;
+    height: 6px;
+    top: calc(50% - 1px);
+  }
+}
+footer .footer__wrapper > li .contacts__list > li {
   padding-left: 30px;
   position: relative;
 }
-footer .footer__wrapper > div .contacts__list > li:first-child::before {
+footer .footer__wrapper > li .contacts__list > li:first-child::before {
   content: "";
   width: 15px;
-  height: 11.42px;
+  height: 12px;
   position: absolute;
   background-image: url(./images/mail.svg);
   background-position: center;
+  background-size: cover;
   top: calc(50% - 6px);
   left: 0;
 }
-footer .footer__wrapper > div .contacts__list > li:nth-child(2)::before {
+@media screen and (max-width: 1024px) {
+  footer .footer__wrapper > li .contacts__list > li:first-child::before {
+    width: 14px;
+    height: 11px;
+    top: calc(50% - 4px);
+  }
+}
+@media screen and (max-width: 768px) {
+  footer .footer__wrapper > li .contacts__list > li:first-child::before {
+    width: 13px;
+    height: 10px;
+    top: calc(50% - 2px);
+  }
+}
+footer .footer__wrapper > li .contacts__list > li:nth-child(2)::before {
   content: "";
   width: 15px;
   height: 15px;
   position: absolute;
+  background-size: cover;
   background-image: url(./images/phone.svg);
   background-position: center;
   top: calc(50% - 8px);
   left: 0;
 }
-footer .footer__wrapper > div .contacts__list > li:last-child::before {
+@media screen and (max-width: 1024px) {
+  footer .footer__wrapper > li .contacts__list > li:nth-child(2)::before {
+    width: 14px;
+    height: 14px;
+    top: calc(50% - 6px);
+  }
+}
+@media screen and (max-width: 768px) {
+  footer .footer__wrapper > li .contacts__list > li:nth-child(2)::before {
+    width: 13px;
+    height: 13px;
+    top: calc(50% - 4px);
+  }
+}
+footer .footer__wrapper > li .contacts__list > li:last-child::before {
   content: "";
   width: 11px;
   height: 15px;
   position: absolute;
   background-image: url(./images/placeholder.svg);
+  background-size: cover;
   background-position: center;
   top: calc(50% - 8px);
   left: 0;
 }
-footer .footer__wrapper > div li > a {
+@media screen and (max-width: 1024px) {
+  footer .footer__wrapper > li .contacts__list > li:last-child::before {
+    width: 10px;
+    height: 14px;
+    top: calc(50% - 6px);
+  }
+}
+@media screen and (max-width: 768px) {
+  footer .footer__wrapper > li .contacts__list > li:last-child::before {
+    width: 9px;
+    height: 13px;
+    top: calc(50% - 4px);
+  }
+}
+footer .footer__wrapper > li li > a {
   font-size: 14px;
   font-weight: 400;
   line-height: 22px;
   color: #999999;
+}
+@media screen and (max-width: 1280px) {
+  footer .footer__wrapper > li li > a {
+    font-size: 14px;
+    line-height: 18px;
+  }
+}
+@media screen and (max-width: 1024px) {
+  footer .footer__wrapper > li li > a {
+    font-size: 12px;
+    line-height: 16px;
+  }
+}
+@media screen and (max-width: 768px) {
+  footer .footer__wrapper > li li > a {
+    font-size: 10px;
+    line-height: 12px;
+  }
+}
+@media screen and (max-width: 640px) {
+  footer .footer__wrapper > li li > a {
+    font-size: 8px;
+    line-height: 10px;
+  }
 }
 footer .footer__copyright {
   font-size: 13px;
@@ -3060,6 +3269,30 @@ footer .footer__copyright {
   font-weight: 400;
   color: #999999;
   margin-bottom: 30px;
+}
+@media screen and (max-width: 1280px) {
+  footer .footer__copyright {
+    font-size: 11px;
+    line-height: 19px;
+  }
+}
+@media screen and (max-width: 1024px) {
+  footer .footer__copyright {
+    font-size: 10px;
+    line-height: 17px;
+  }
+}
+@media screen and (max-width: 768px) {
+  footer .footer__copyright {
+    font-size: 9px;
+    line-height: 16px;
+  }
+}
+@media screen and (max-width: 640px) {
+  footer .footer__copyright {
+    font-size: 6px;
+    line-height: 15px;
+  }
 }
 
 /*# sourceMappingURL=style.css.map */
